------解释器设计模式------
#给定一个语言，
#定义它文法的一种表示，
#并定义一个解释器，
#这个解释器使用该表示来解释语言中的句子

@startuml
abstract class AbstractExpression{
    + {abstract} void interpret(Context context)
}

class TerminalExpression
class NonterminalExpression

AbstractExpression <|-- TerminalExpression : extends
AbstractExpression <|-- NonterminalExpression : extends
NonterminalExpression o-- AbstractExpression : Aggregation
@enduml